--- a/scss/setting/_color.scss
+++ b/scss/setting/_color.scss
@@ -7,19 +7,32 @@ $white00: white;
 /*白*/
 
 $black00: black;
+$black01: #1A1A1A;
 /*黒*/
 
 $gray00: gray;
+$gray01: #DBDBDB;
+$gray02: #707070;
+$gray03: #868686;
+$gray04: #586F62;
 /*灰色*/
 
 $yellow00: yellow;
+$yellow01: #F5EE44;
 /*黄*/
 
 $red00: red;
+$red01: #CA0915;
 /*赤*/
 
 $blue00: blue;
 $blue01: #03283E;
+$blue02: #0A71AD;
+$blue03: #85B8D6;
+$blue04: #C1DBEA;
+$blue05: #E6F0F7;
+$blue06: #9DC6DE;
+$blue07: #D9E9F2;
 /*青*/
 
 $green00: green;
