--- a/scss/setting/_variables.scss
+++ b/scss/setting/_variables.scss
@@ -6,8 +6,10 @@
 // =============================================================
 
 $NotoSans: 'Noto Sans JP', sans-serif;
+$NotoSerif: 'Noto Serif JP', serif;
 
 $base-font-family: $NotoSans;
+$base-font-family-serif : $NotoSerif;
 $base-font-size: 16;
 $base-font-size-sp: 32;
 
