--- a/scss/layout/_company.scss
+++ b/scss/layout/_company.scss
@@ -2,115 +2,572 @@
 ============================================================================================================ */
 
 .page-company{
+	&__inner {
+		margin-top : 77.5px;
+		@include mq_sp{
+			margin-top : size_sp(113);
+		}
+	}
 	&__intro {
 		font-size : 16px;
 		line-height : calc(37/16);
 		width : 606px;
 		margin : 0 auto;
+		@include mq_sp{
+			@include fz_vw(30);
+			line-height : (62/30);
+			width :  size_sp(600);
+		}
+	}
+	&__logo {
+		width : 172px;
+		margin  : 0 auto;
+		position : relative;
+		@include mq_sp{
+			width : size_sp(172);
+		}
+		&-inner {
+			width : 100%;
+			opacity : .1;
+		}
+	}
+	&__catchCopy {
+		font-size : 30px;
+		letter-spacing : .1em;
+		line-height : 1;
+		width : 506px;
+		position : absolute;
+		top : 50%;
+		left : 50%;
+		transform : translate(-50%, -50%);
+		@include mq_sp{
+			@include fz_vw(38);
+			width : size_sp(640);
+		}
 	}
 	&__representative {
+		margin-top : 84px;
+		@include mq_sp{
+			margin-top : size_sp(121);
+		}
 		&-ttl {
 			font-size : 28px;
+			letter-spacing: .1em;
 			line-height : 1;
 			text-align : center;
+			@include mq_sp{
+				@include fz_vw(34);
+			}
 		}
 		&-name {
 			text-align : right;
 			width : 112px;
+			margin-top : 18px;
 			margin-left : auto;
+			@include mq_sp{
+				width : size_sp(214);
+				margin-top : size_sp(32);
+			}
+		}
+		&-txt {
+			font-size : 16px;
+			line-height : calc(37/16);
+			margin-top : 39px;
+			@include mq_sp{
+				@include fz_vw(30);
+				line-height : (62/30);
+				margin-top : size_sp(58);
+			}
 		}
 	}
 	&__team {
+			margin-top : 149px;
+			@include mq_sp{
+				margin-top :size_sp(148);
+			}
 		&-position {
 			font-size : 24px;
 			letter-spacing : .1em;
 			line-height : 1;
 			text-align : center;
+			@include mq_sp{
+				@include fz_vw(32);
+			}
 		}
 		&-inner {
 			width : 606px;
-			@include flex($display: flex, $wrap: wrap, $justify_c: flex-start, $align_i: center, $align_c: stretch, $direction: row,);
+			margin-top : 45px;
+			@include flex($display: flex, $wrap: wrap, $justify_c: flex-start, $align_i: stretch, $align_c: stretch, $direction: row,);
+			@include mq_sp{
+				width : size_sp(600);
+				margin-top : size_sp(67);
+				align-items: center;
+				flex-direction: column;
+			}
 		}
 		&-left {
 			width : 250px;
 			height : 250px;
-			// 後で消す↓↓↓
-			background-color : gray;
+			@include mq_sp{
+				width : size_sp(350);
+				height : size_sp(350);
+			}
 		}
 		&-right {
 			width : 356px;
+			@include mq_sp{
+				width : 100%;
+			}
 		}
 		&-excerpt {
 			font-size : 20px;
 			line-height : calc(46/20);
-			width : 220px;
-			margin : 0 auto;
+			text-align: center;
+			width : 242px;
+			margin : 23px auto 0;
+			@include mq_sp{
+				@include fz_vw(32);
+				line-height : (74/32);
+				text-align : center;
+				width : 100%;
+				margin-top : size_sp(36);
+			}
 		}
 		&-name {
 			text-align : center;
+			margin-top : 36px;
+			@include mq_sp{
+				margin-top : size_sp(27);
+			}
+		}
+		&-txt {
+			margin-top : 34px;
+			@include mq_sp{
+				margin-top : size_sp(32);
+			}
 		}
 	}
 	// 採用情報
 	&__recruit {
+		margin-top : 199px;
+		@include mq_sp{
+			margin-top : size_sp(199);
+		}
 		&-ttl {
 			font-size : 28px;
 			letter-spacing : .1em;
 			line-height : 1;
 			text-align : center;
+			@include mq_sp{
+				@include fz_vw(36);
+			}
 		}
 		&-inner {
+			height : (328/774)*100%;
+			margin-top : 66px;
 			position : relative;
+			@include mq_sp{
+				margin-top : size_sp(68);
+			}
 		}
 		&-left {
-			width :662px;
-			height : 328px;
-			background-color : gray;
+			width : (662/1160)*100%;
+			height : 100%;
 			position : relative;
-			left : -10px;
-			&:before {
-				content : "";
-				width : 82px;
-				height : 246px;
-				position :absolute;
-				bottom : 0;
-				right : 0;
-				background-color : white;
+			left : (-10/1160)*100%;
+			@include mq_sp{
+				width : size_sp(440);
+				height : size_sp(300);
+				left : 0;
 			}
 		}
 		&-right {
-			width : 662px;
-			height : 328px;
-			background-color : gray;
+			width : (662/1160)*100%;
+			height : 100%;
 			position : absolute;
-			top : 102px;
-			right : -10px;
+			top : (102/328)*100%;;
+			right : (-10/1160)*100%;
+			@include mq_sp{
+				width : size_sp(440);
+				height : size_sp(300);
+				top : size_sp(95);
+				right : 0;
+			}
 		}
 		&-txt {
-			width : 420px;
-			margin : 0 auto;
+			font-size : 16px;
+			line-height : calc(37/16);
+			width : 606px;
+			margin : (135/1160)*100% auto 0;
+			@media (max-width: 1280px) {
+				margin-top : 135px;
+			}
+			@include mq_sp{
+				@include fz_vw(30);
+				line-height : (62/30);
+				width : size_sp(600);
+				margin-top : size_sp(146);
+			}
+		}
+		& .mod-btn {
+			margin : 54px auto 0;
+			@include mq_sp{
+				margin-top : size_sp(91);
+			}
 		}
 	}
 	// RIAグループ
 	&__group {
-		width : 606px;
-		margin : 0 auto;
+		width : 904px;
+		margin : 206px auto 0;
+		@include mq_tab{
+			width : (904/1024)*100%;
+		}
+		@include mq_sp{
+			width : 100%;
+			margin-top : size_sp(208);
+		}
 		&-ttl {
 			font-size : 28px;
+			line-height : 1;
 			letter-spacing : .1em;
 			text-align : center;
+			@include mq_sp{
+				@include fz_vw(36);
+			}
+		}
+		&-forte {
+			font-size : 16px;
+			line-height: calc(37/16);
+			width : 605px;
+			margin : 59px auto 0;
+			@include mq_sp{
+				@include fz_vw(30);
+				line-height : (62/30);
+				width : size_sp(600);
+				margin-top : size_sp(59);
+			}
 		}
 		&-img {
 			width : 100%;
-			height : 405px;
-			background-color :gray;
+			margin : 34px auto 0;
+			position : relative;
+			@include mq_sp{
+				width : 100%;
+				margin-top : size_sp(51);
+			}
+			&-link {
+				width : 135px;
+				height : 59px;
+				display: block;
+				position : absolute;
+				@include mq_sp{
+					width : size_sp(163);
+					height : size_sp(72);
+				}
+				&:first-of-type {
+					width : 858px;
+					height : 64px;
+					top : 23px;
+					left : 23px;
+					@include mq_sp{
+						width : size_sp(671);
+						height : size_sp(79);
+						top : 0;
+						left : size_sp(40);
+					}
+				}
+				&:nth-of-type(2) {
+					top : 188px;
+					left : 71px;
+					@include mq_sp{
+						top : size_sp(201);
+						left : size_sp(209);
+					}
+				}
+				&:nth-of-type(3) {
+					top : 188px;
+					left : 211px;
+					@include mq_sp{
+						top : size_sp(201);
+						left : size_sp(380);
+					}
+				}
+				&:nth-of-type(4) {
+					top : 188px;
+					left : 371px;
+					@include mq_sp{
+						top : size_sp(338);
+						left : size_sp(209);
+					}
+				}
+				&:nth-of-type(5) {
+					top : 188px;
+					left : 511px;
+					@include mq_sp{
+						top : size_sp(338);
+						left : size_sp(380);
+					}
+				}
+				&:nth-of-type(6) {
+					top : 300px;
+					left : 132px;
+					@include mq_sp{
+						top : size_sp(473);
+						left : size_sp(99);
+					}
+				}
+				&:nth-of-type(7) {
+					top : 300px;
+					left : 291px;
+					@include mq_sp{
+						top : size_sp(473);
+						left : size_sp(293);
+					}
+				}
+				&:nth-of-type(8) {
+					top : 300px;
+					left : 450px;
+					pointer-events: none;
+					@include mq_sp{
+						top : size_sp(473);
+						left : size_sp(487);
+					}
+				}
+				&:nth-of-type(9) {
+					top : 410px;
+					left : 218px;
+					pointer-events: none;
+					@include mq_sp{
+						top : size_sp(609);
+						left : size_sp(197);
+					}
+				}
+				&:nth-of-type(10) {
+					top : 410px;
+					left : 377px;
+					@include mq_sp{
+						top : size_sp(609);
+						left : size_sp(391);
+					}
+				}
+				&:nth-of-type(11) {
+					top : 175px;
+					left : 698px;
+					@include mq_sp{
+						top : size_sp(978);
+						left : size_sp(282);
+					}
+				}
+				&:nth-of-type(12) {
+					top : 294px;
+					left : 698px;
+					@include mq_sp{
+						top : size_sp(811);
+						left : size_sp(111);
+					}
+				}
+				&:nth-of-type(13) {
+					top : 359px;
+					left : 698px;
+					@include mq_sp{
+						top : size_sp(811);
+						left : size_sp(282);
+					}
+				}
+				&:nth-of-type(14) {
+					top : 424px;
+					left : 698px;
+					@include mq_sp{
+						top : size_sp(811);
+						left : size_sp(453);
+					}
+				}
+			}
+		}
+	}
+	// 会社情報
+	&__info {
+		margin-top : 205px;
+		@include mq_sp{
+			margin-top : size_sp(208);
+		}
+		&-ttl {
+			font-size : 28px;
+			line-height : 1;
+			letter-spacing: .1em;
+			text-align : center;
+			@include mq_sp{
+				@include fz_vw(36);
+			}
+		}
+		&-list {
+			width : 606px;
+			margin : 65px auto 0;
+			@include mq_sp{
+				width : size_sp(600);
+				margin-top : size_sp(65);
+			}
+		}
+		&-item {
+			font-size : 16px;
+			line-height : calc(26/16);
+			@include flex($display: flex, $wrap: wrap, $justify_c: flex-start, $align_i: stretch, $align_c: stretch, $direction: row,);
+			@include mq_sp{
+				@include fz_vw(30);
+				line-height : (50/30);
+				flex-direction: column;;
+			}
+			&:not(:first-of-type) {
+				margin-top: 28px;
+				@include mq_sp{
+					margin-top : size_sp(64);
+				}
+			}
+		}
+		&-left {
+			width : 96px;
+			margin-right : 30px;
+			@include mq_sp{
+				width : 100%;
+				margin-right : 0;
+			}
+		}
+		&-right {
+			width : 480px;
+			@include mq_sp{
+				width : 100%;
+				margin-top : size_sp(24);
+			}
 		}
 	}
 	// アクセス
 	&__access {
+		margin-top : 190px;
+		@include mq_sp{
+			margin-top : size_sp(186);
+		}
 		&-ttl {
 			font-size : 28px;
 			letter-spacing : .1em;
 			text-align : center;
+			@include mq_sp{
+				@include fz_vw(36);
+			}
+		}
+		&-list {
+			margin-top : 52px;
+			@include mq_sp{
+				margin-top : size_sp(48);
+			}
+		}
+		&-item {
+			position : relative;
+			&:not(:first-of-type) {
+				margin-top : 202px;
+				@include mq_sp{
+					margin-top : size_sp(315);
+				}
+			}
+		}
+		&-map {
+			height : 500px;
+			@include mq_sp{
+				height : size_sp(550);
+			}
+		}
+		&-inner {
+			line-height : 1;
+			font-weight : 700;
+			text-align : center;
+			color : $white00;
+			background-color : rgba(3, 30, 62, .6);
+			width : 492px;
+			padding : 24px 0 20px;
+			position : absolute;
+			bottom : -82px;
+			left : 50%;;
+			transform : translateX(-50%);
+			@include mq_sp{
+				width : size_sp(494);
+				padding : size_sp(36) 0 size_sp(30);
+				bottom : size_sp(-165);
+			}
+		}
+		&-main {
+			font-size : 18px;
+			line-height : 1;
+			@include mq_sp{
+				@include fz_vw(28);
+			}
+		}
+		&-address {
+			font-size : 14px;
+			margin-top : 22px;
+			@include mq_sp{
+				@include fz_vw(26);
+				line-height : (50/26);
+				margin-top : size_sp(20);
+			}
+		}
+		& .mod-btn {
+			font-size : 14px;
+			color : $white00;
+			width : 190px;
+			border : solid 2px $white00;
+			margin : 22px auto 0;
+			@include mq_sp{
+				@include fz_vw(24);
+				width : size_sp(330);
+				border : solid size_sp(3) $white00;
+				margin-top : size_sp(33);
+			}
+			&:hover {
+				&:before {
+					// width : 40px;
+					// @include mq_sp{
+					// 	width : size_sp(90);
+					// }
+					animation: companyDelete .2s linear forwards, companyExtend .2s  .4s linear forwards;
+					@include mq_sp{
+						animation : none;
+					}
+					@keyframes companyDelete {
+						0% {
+							opacity :1;
+						}
+						100% {
+							opacity: 0;
+						}
+					}
+					@keyframes companyExtend {
+						0% {
+							opacity: 1;
+							width : 0;
+						}
+						100% {
+							opacity: 1;
+							width : 40px;
+						}
+					}
+				}
+			}
+			& a {
+				padding : 13px 0;
+				transition :0s;
+				@include mq_sp{
+					padding : size_sp(27) 0 size_sp(26);
+				}
+			}
+			&:before {
+				width : 40px;
+				background-color : $white00;
+				left : 168px;
+				@include mq_sp{
+					width : size_sp(90);
+					left : size_sp(297);
+				}
+			}
 		}
 	}
 }
