--- a/scss/module/_infinite-scroll.scss
+++ b/scss/module/_infinite-scroll.scss
@@ -12,7 +12,7 @@
 .infinite-scroll-request {
   animation: scroll-request 1.1s infinite linear;
   border: 4px solid $red01;
-  border-left: 4px solid $red02;
+  // border-left: 4px solid $red02;
   border-radius: 50%;
   height: 48px;
   margin: auto;
