--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 /*!
-Theme Name: テーマ名に置き換え
+Theme Name: RIAパートナーズ
 Theme URI: http://underscores.me/
 Author: Heads.Inc
 Author URI: -------
-Description: テーマ名に置き換え Theme
+Description: RIAパートナーズ Theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
 /*! --------------------------------------------------------------
@@ -51,7 +51,9 @@ License: GNU General Public License v2 or later
 @import "scss/layout/_top.scss";
 @import "scss/layout/_archive.scss";
 @import "scss/layout/_archive-gallery.scss";
+@import "scss/layout/_service.scss";
 @import "scss/layout/_single.scss";
+@import "scss/layout/_single-gallery.scss";
 @import "scss/layout/_post.scss";
 @import "scss/layout/_container.scss";
 @import "scss/layout/_keyvisual.scss";
@@ -65,14 +67,29 @@ License: GNU General Public License v2 or later
 
 @import "scss/module/_pagettl.scss";
 @import "scss/module/_form.scss";
+@import "scss/module/_gallery.scss";
 @import "scss/module/_btn.scss";
 @import "scss/module/_breadcrumbs.scss";
-@import "scss/module/_pagenavi.scss";
+@import "scss/module/_fv.scss";
+@import "scss/module/_infinite-scroll.scss";
 @import "scss/module/_scroll.scss";
 
 /* module > top
 ============================================================================ */
 
 @import "scss/module/top/_keyvisual.scss";
-@import "scss/module/top/_preview-info.scss";
+@import "scss/module/top/_preview.scss";
+@import "scss/module/top/_gallery.scss";
+@import "scss/module/top/_service.scss";
+@import "scss/module/top/_news.scss";
+@import "scss/module/top/_company.scss";
+@import "scss/module/top/_faq.scss";
 
+
+
+/* module > contact
+============================================================================ */
+
+@import "scss/module/contact/_general-contact.scss";
+@import "scss/module/contact/_resident-contact.scss";
+@import "scss/module/contact/_reservation.scss";
